--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
-<!-- This Source Code Form is subject to the terms of the Mozilla Public
-   - License, v. 2.0. If a copy of the MPL was not distributed with this file,
-   - You can obtain one at http://mozilla.org/MPL/2.0/. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Nintendo Skibiditiobox - Wikipedia</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      background-color: #ffffff;
+      color: #000000;
+      line-height: 1.6;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 2em;
+      border-bottom: 1px solid #aaa;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin-top: 30px;
+      border-bottom: 1px solid #ccc;
+    }
+    p, li {
+      font-size: 1em;
+    }
+    .infobox {
+      float: right;
+      width: 300px;
+      margin: 0 0 20px 20px;
+      padding: 10px;
+      background-color: #f9f9f9;
+      border: 1px solid #aaa;
+      font-size: 0.9em;
+    }
+    .infobox th {
+      text-align: left;
+      font-weight: bold;
+      background-color: #e6e6e6;
+      padding: 4px;
+    }
+    .infobox td {
+      padding: 4px;
+    }
+    a {
+      color: #0645ad;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 50px;
+      font-size: 0.85em;
+      color: #666;
+      border-top: 1px solid #ccc;
+      padding-top: 10px;
+    }
+  </style>
+</head>
+<body>
 
-<!doctype html>
-<html>
-  <head>
-  </head>
-   <body>
-      Hello The skibiditiobox exists
-  </body>
+  <h1>Nintendo Skibiditiobox</h1>
+
+  <div class="infobox">
+    <table>
+      <tr><th>Developer</th><td>Nintendo</td></tr>
+      <tr><th>Manufacturer</th><td>Nintendo</td></tr>
+      <tr><th>Product family</th><td>Nintendo Skibiditiobox</td></tr>
+      <tr><th>Type</th><td>Home video game console</td></tr>
+      <tr><th>Generation</th><td>Ninth</td></tr>
+      <tr><th>Release date</th><td>November 17, 2023</td></tr>
+      <tr><th>Discontinued</th><td>March 2025</td></tr>
+      <tr><th>Lifespan</th><td>2023–2025</td></tr>
+      <tr><th>Media</th><td>SkibidiDisc, digital download</td></tr>
+      <tr><th>CPU</th><td>Custom 10-core ARM Neptune</td></tr>
+      <tr><th>Storage</th><td>512 GB SSD</td></tr>
+      <tr><th>Memory</th><td>16 GB LPDDR6</td></tr>
+      <tr><th>Graphics</th><td>SkibidiGPU-X 12 TFLOPS</td></tr>
+      <tr><th>Online services</th><td>Skibiditi Online</td></tr>
+    </table>
+  </div>
+
+  <p>The <strong>Nintendo Skibiditiobox</strong> was a home video game console developed and manufactured by Nintendo. It was released on November 17, 2023, as part of the ninth generation of video game consoles. The Skibiditiobox succeeded the Nintendo Switch and introduced several technological innovations, including 8K resolution support and adaptive controller feedback.</p>
+
+  <h2>History</h2>
+  <p>Development of the Skibiditiobox began in late 2020 under the codename "Project EchoBeat." Nintendo aimed to create a system that bridged traditional console experiences with cloud-integrated gaming. The console was unveiled during a Nintendo Direct in June 2023.</p>
+
+  <h2>Features</h2>
+  <p>The Skibiditiobox featured a custom 10-core ARM processor, an advanced GPU branded as the SkibidiGPU-X, and 16 GB of LPDDR6 memory. It supported physical media via proprietary SkibidiDiscs, as well as digital downloads through the Skibiditi Online storefront. Its signature controller, the JoySkibidi Pro, included haptic feedback, motion tracking, and voice-activated controls.</p>
+
+  <h2>Games</h2>
+  <p>The console launched with several first-party titles, including:</p>
+  <ul>
+    <li><em>Mario Multiverse Brawl</em></li>
+    <li><em>Zelda: Crystal of Eternity</em></li>
+    <li><em>Skibidi Kart X</em></li>
+    <li><em>Metroid Prime: Resurgence</em></li>
+  </ul>
+  <p>It also supported backwards compatibility with select Nintendo Switch titles via a downloadable emulator patch.</p>
+
+  <h2>Reception and Legacy</h2>
+  <p>The Skibiditiobox received positive critical acclaim for its performance and software library, but its high launch price and limited third-party support contributed to a relatively short market lifespan. Production officially ended in March 2025, making it one of Nintendo’s shortest-supported home consoles.</p>
+
+  <h2>See also</h2>
+  <ul>
+    <li><a href="#">Nintendo Switch</a></li>
+    <li><a href="#">List of Nintendo consoles</a></li>
+    <li><a href="#">Skibiditi Online</a></li>
+  </ul>
+
+  <footer>
+    This page was last edited on May 11, 2025. <br>
+    Content is available under CC BY-SA 3.0 unless otherwise noted.
+  </footer>
+
+</body>
 </html>
