--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  Bonjour, Welcome to 
+  <h1>Vigenère cypher solver</h1>
+  
 </body>
 </html>
