--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-  <h1>Vigenère cypher solver</h1>
-  
-</body>
+<html>
+	<head></head>
+	<body>
+		<textarea placeholder= "Paste Ciphertext"></textarea>
+		<br>
+		Type The Expected Key Length: <input type="number">
+		<button>Execute</button>
+	</body>
 </html>
