Added read only textarea

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<textarea placeholder= "Paste Ciphertext"></textarea>
 		<br>
 		Type The Expected Key Length: <input type="number">
+        <br>
 		<button>Execute</button>
+        <textarea readonly>Test</textarea>
 	</body>
 </html>
