--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
 	<body>
-		<textarea placeholder= "Paste Ciphertext"></textarea>
+		<textarea placeholder= "Paste Ciphertext" ></textarea>
 		<br>
-		Type The Expected Key Length: <input type="number">
+		<b>Type The Expected Key Length: </b><input type="text">
         <br>
 		<button>Execute</button>
         <br>
-        <textarea readonly>Test</textarea>
+        <textarea readonly placeholder="Output"></textarea>
 	</body>
 </html>
+<script src="main.js"></script>
