--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<textarea placeholder= "Paste Ciphertext" ></textarea>
-		<br>
-		<b>Type The Expected Key Length: </b><input type="text">
-        <br>
-		<button>Execute</button>
-        <br>
-        <textarea readonly placeholder="Output"></textarea>
+		<div id="tool">
+			<textarea placeholder= "Paste Ciphertext" ></textarea>
+			<br>
+			<b>Type The Expected Key Length: </b><input type="text">
+			<br>
+			<button>Execute</button>
+			<br>
+			<textarea readonly placeholder="Output"></textarea>
+		</div>
+
 	</body>
 </html>
 <script src="main.js"></script>
