added colorful mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<button onclick="solve()">Execute</button>
 			<br>
 			<textarea id="output" readonly placeholder="Output"></textarea>
+			<input type="checkbox" id="check">
+
 		</div>
 
 	</body>
