--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                         </div>
                         <div class="contents">
-                            <div class="project" onclick="document.location.href = '/vigenere'">
+                            <div class="project" onclick="document.location.href = '/Vigenere'">
                                 <h3>Vigenere</h3>
                                 <h3>Solver</h3>
                             </div>
